@startuml

title __SEGYMPVEDITOR's Class Diagram__\n

  namespace main.java.vladimir.seis {
    class main.java.vladimir.seis.ChartExecutor {
    }
  }
  

  namespace main.java.vladimir.seis {
    class main.java.vladimir.seis.MyCategoryPlot {
    }
  }
  

  namespace main.java.vladimir.seis {
    class main.java.vladimir.seis.MyDrawingGlassPane {
    }
  }
  

  namespace main.java.vladimir.seis {
    class main.java.vladimir.seis.PrintDebugInfo {
    }
  }
  

  namespace main.java.vladimir.seis {
    class main.java.vladimir.seis.Settings {
    }
  }
  

  namespace main.java.vladimir.seis {
    class main.java.vladimir.seis.Settings_singleton {
    }
  }
  

  namespace main.java.vladimir.seis {
    class main.java.vladimir.seis.fileBinHeader {
    }
  }
  

  namespace main.java.vladimir.seis {
    class main.java.vladimir.seis.fileTxtHeader {
    }
  }
  

  namespace main.java.vladimir.seis {
    class main.java.vladimir.seis.mainController {
    }
  }
  

  namespace main.java.vladimir.seis {
    class main.java.vladimir.seis.mainGui {
    }
  }
  

  namespace main.java.vladimir.seis {
    namespace segystream {
      class main.java.vladimir.seis.segystream.CategoryPlotRewrite {
      }
    }
  }
  

  namespace main.java.vladimir.seis {
    namespace segystream {
      class main.java.vladimir.seis.segystream.ChartPanelRewrite {
      }
    }
  }
  

  namespace main.java.vladimir.seis {
    namespace segystream {
      class main.java.vladimir.seis.segystream.DefaultCategoryDatasetRewrite {
      }
    }
  }
  

  namespace main.java.vladimir.seis {
    namespace segystream {
      namespace SEGYTempEdit {
        class main.java.vladimir.seis.segystream.SEGYTempEdit.SegyTempFile {
        }
      }
    }
  }
  

  namespace main.java.vladimir.seis {
    namespace segystream {
      namespace SEGYTempEdit {
        class main.java.vladimir.seis.segystream.SEGYTempEdit.SegyTempTrace {
        }
      }
    }
  }
  

  namespace main.java.vladimir.seis {
    namespace segystream {
      namespace SEGYTempEdit {
        class main.java.vladimir.seis.segystream.SEGYTempEdit.SegyTempTraceData {
        }
      }
    }
  }
  

  namespace main.java.vladimir.seis {
    namespace segystream {
      namespace SEGYTempEdit {
        class main.java.vladimir.seis.segystream.SEGYTempEdit.TrimLawSingleValue {
        }
      }
    }
  }
  

  namespace main.java.vladimir.seis {
    class main.java.vladimir.seis.traceBinHeader {
    }
  }
  

  main.java.vladimir.seis.ChartExecutor o-- main.java.vladimir.seis.Settings_singleton : settings_singleton
  main.java.vladimir.seis.MyCategoryPlot .up.|> java.awt.event.MouseListener
  main.java.vladimir.seis.MyCategoryPlot -up-|> org.jfree.chart.plot.CategoryPlot
  main.java.vladimir.seis.MyDrawingGlassPane .up.|> javax.swing.event.MouseInputListener
  main.java.vladimir.seis.MyDrawingGlassPane -up-|> javax.swing.JComponent
  main.java.vladimir.seis.MyDrawingGlassPane o-- main.java.vladimir.seis.segystream.ChartPanelRewrite : tempChartPanelRewrite
  main.java.vladimir.seis.Settings_singleton o-- main.java.vladimir.seis.Settings_singleton : settings_singleton
  main.java.vladimir.seis.mainController o-- main.java.vladimir.seis.segystream.SEGYTempEdit.SegyTempFile : segyTempFile
  main.java.vladimir.seis.mainGui o-- main.java.vladimir.seis.ChartExecutor : chartExecutor
  main.java.vladimir.seis.segystream.CategoryPlotRewrite -up-|> org.jfree.chart.plot.CategoryPlot
  main.java.vladimir.seis.segystream.ChartPanelRewrite .up.|> org.jfree.chart.ChartMouseListener
  main.java.vladimir.seis.segystream.ChartPanelRewrite -up-|> org.jfree.chart.ChartPanel
  main.java.vladimir.seis.segystream.ChartPanelRewrite o-- main.java.vladimir.seis.ChartExecutor : chartExecutor
  main.java.vladimir.seis.segystream.ChartPanelRewrite o-- main.java.vladimir.seis.Settings_singleton : settings_singleton
  main.java.vladimir.seis.segystream.DefaultCategoryDatasetRewrite -up-|> org.jfree.data.category.DefaultCategoryDataset


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
